# foxford

./: .gitignore  LICENSE  README.md  client.py  level.py  mkdocs.yml  pyproject.toml  readme.md  setup.py  users.py
bases/: baseitem.py  baselevel.py  baseuser.py
docs/: index.md
docs/_css/: style.css
docs/en/: index.md
docs/en/latest/tutorial/: faq.md  recommended-ide.md
docs/en/tutorial/: first-interaction.md
docs/javascripts/: extra.js
docs/ru/latest/: index.md
docs/ru/latest/tutorial/: faq.md  first-interaction.md
docs/ru/tutorial/: first-interaction.md  index.md  recommended-ide.md
docs/tutorial/: first-interaction.md  index.md
docs_theme/: 404.html  main.html
examples/: basic.py  custom_request.py
foxford/: __init__.py  client.py  readme.md
foxford/bases/: baseitem.py  baselevel.py
foxford/partials/: partialuser.py
foxford/utilities/: requests.py
partials/: partiallevel.py  partialuser.py
src/foxford/: __init__.py  client.py  level.py  users.py
src/foxford/bases/: baseuser.py
src/foxford/partials/: partiallevel.py
src/foxford/utilities/: exceptions.py
utilities/: exceptions.py  requests.py
