[build-system]
requires = ["setuptools>=61.0", "httpx>=0.21.0", "python-dateutil>=2.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foxford"
version = "1.4"
authors = [
  { name="FrostX", email="denialfrostiks589@gmail.com" },
]
description = "Modern object-oriented asynchronous Python wrapper for the Foxford's web API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Framework :: AsyncIO",
        "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
        "Topic :: Software Development :: Libraries"
]

[project.urls]
"Homepage" = "https://github.com/frostx-official/foxford"
"Issues" = "https://github.com/frostx-official/foxford/issues"