[tool.poetry]
name = "foxford"
version = "1.5-dev"
authors = ["FrostX"]
description = "Modern object-oriented asynchronous Python wrapper for the Foxford's web API."
readme = "README.md"
homepage = "https://github.com/frostx-official/foxford"
repository = "https://github.com/frostx-official/foxford"
license = "MIT"
keywords = [
  "foxford",
  "foxford-api",
  "api",
  "wrapper",
  "async",
  "asyncio"
]
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Framework :: AsyncIO",
        "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
        "Topic :: Software Development :: Libraries"
]

[tool.poetry.urls]
"Homepage" = "https://github.com/frostx-official/foxford"
"Bug Tracker" = "https://github.com/frostx-official/foxford/issues"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
typing-extensions = "^4.4.0"

[tool.poetry.group.docs.dependencies]
# Docs
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"
mkdocs-redirects = "^1.2.0"

[build-system]
requires = ["setuptools>=61.0", "httpx>=0.21.0", "python-dateutil>=2.8.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"